Update Final work

--- a/trabajo_final.ipynb
+++ b/trabajo_final.ipynb
@@ -17,8 +17,9 @@
     "\n",
     "La entrega debe ser un archivo .ipynb que contenga las respuestas, con el código de R necesario cuando corresponda.\n",
     "La resolución de los ejercicios no debiera requerir conocimientos de programación en R más allá de los ejemplos que se vieron en la clase. De todas formas, pueden consultar acercar del uso del lenguage de programacion R si es necesario.\n",
+    "Recuerden que pueden hacer una copia del *notebook* a su unidad de google drive y pueden descargar una copia desde la barra de menú>Archivo>Descargar\n",
     "\n",
-    "Fecha límite de entrega 1 de agosto de 2021, la entrega debe hacerse por el Classroom de la materia."
+    "Fecha límite de entrega 1 de agosto de 2021, la entrega debe hacerse por el Classroom de la materia.\n"
    ]
   },
   {
