--- a/08_ejercicios.ipynb
+++ b/08_ejercicios.ipynb
@@ -107,6 +107,48 @@
     "los proyectos de secuenciación de virus de la familia Baculoviridae (Trabajar con un máximo de 30).\n",
     "Recuperar de cada ellos el nómbre del organismo secuenciado y su 'TaxId' y el título del proyecto."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "227731fd",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 7\n",
+    "\n",
+    "Recuperar todas las secuencias de RefSeq de los virus de la familia\n",
+    "\"Coronaviridae\". Puede buscar las secuencias RefSeq en el KeyWord.\n",
+    "\n",
+    "1. Generar una tabla que tenga el nombre del virus, la cepa, el número de acceso\n",
+    "   y la versión, y el tamaño del genoma (usando ESummary)\n",
+    "2. Hacer un gráfico para mostrar las fechas originales de la secuencia.\n",
+    "3. Recuparar los nombres de los hospedadores de cada virus y agregalor a la\n",
+    "   tabla del punto 1 (Usando EFETCH). Exportar la tabla como un archivo de\n",
+    "   texto (p.e. CSV)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83f6bbb1",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 8\n",
+    "\n",
+    "La familia Macin (PF14865) son proteínas antibacteriales. El primer miembro de\n",
+    "esta familia fue descripto en el organismo *Hirudo medicinalis* (La sanguijuela\n",
+    "que sea utilizaba en \"medicina alternativa\").\n",
+    "\n",
+    "1. Recuperar de pfam el alineamiento completo para la familia Macin (PF14865).\n",
+    "2. Recuparar las secuencias completas de cada una de las proteinas de Uniprot.\n",
+    "3. Para cada una de las proteínas completas, buscar en pfam todos los dominios\n",
+    "   que contienen.\n",
+    "4. Hacer un gráfico de barras para mostrar la posición de los dominios por\n",
+    "   proteína.\n",
+    "5. Generalice el código para que haga los mismo con cualquier familia de\n",
+    "   Pfam.\n",
+    "\n",
+    "Las funciones *str_split*, *barplot*, *rect*, y *seq_along* pueden ser de\n",
+    "utilidad."
+   ]
   }
  ],
  "metadata": {
