Update classes 03 and 04

--- a/04_Formatos_comunes.ipynb
+++ b/04_Formatos_comunes.ipynb
@@ -27,7 +27,7 @@
     "```xml\n",
     "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
     "<ResultadoDeBusqueda>\n",
-    "    <Proteinas>\n",
+    "    <Proteinas cantidad=\"2\">\n",
     "        <Protein>\n",
     "            <Nombre>\n",
     "                FUS\n",
@@ -59,12 +59,599 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7cd30bc",
+   "metadata": {},
+   "source": [
+    "En R hay librarias \"standard\" para procesar estos archivos.\n",
+    "\n",
+    "- XML\n",
+    "- xml2\n",
+    "\n",
+    "Con ambas se pueden hacer las mismas cosas.\n",
+    "\n",
+    "Algunos paquetes que nos permiten acceder a las bases de datos pueden devolver\n",
+    "resultados generados con una de ellas, miestras que otras pueden usar otro."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5719f116",
+   "metadata": {},
+   "source": [
+    "### Libraria XML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "edd40a76",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "library(XML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0f5c854d",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+      "<ResultadoDeBusqueda>\n",
+      "  <Proteinas cantidad=\"2\">\n",
+      "    <Protein>\n",
+      "      <Nombre>FUS</Nombre>\n",
+      "      <ProteinID>Q6IBQ5</ProteinID>\n",
+      "      <Longitud>526</Longitud>\n",
+      "    </Protein>\n",
+      "    <Protein>\n",
+      "      <Nombre>FIBP</Nombre>\n",
+      "      <ProteinID>Q6IBQ3</ProteinID>\n",
+      "      <Longitud>364</Longitud>\n",
+      "    </Protein>\n",
+      "  </Proteinas>\n",
+      "  <NumeroDeResultados>2</NumeroDeResultados>\n",
+      "</ResultadoDeBusqueda>\n",
+      " \n",
+      "[1] \"XMLInternalDocument\" \"XMLAbstractDocument\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "xml_content <- '<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+    "<ResultadoDeBusqueda>\n",
+    "<Proteinas cantidad=\"2\">\n",
+    "<Protein>\n",
+    "<Nombre>FUS</Nombre>\n",
+    "<ProteinID>Q6IBQ5</ProteinID>\n",
+    "<Longitud>526</Longitud>\n",
+    "</Protein>\n",
+    "<Protein>\n",
+    "<Nombre>FIBP</Nombre>\n",
+    "<ProteinID>Q6IBQ3</ProteinID>\n",
+    "<Longitud>364</Longitud>\n",
+    "</Protein>\n",
+    "</Proteinas>\n",
+    "<NumeroDeResultados>2</NumeroDeResultados>\n",
+    "</ResultadoDeBusqueda>'\n",
+    "\n",
+    "# Lee el Texto en formato XML\n",
+    "xml_document <- xmlParse(xml_content)\n",
+    "print(xml_document)\n",
+    "print(class(xml_document))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b03cb034",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "<Protein>\n",
+      "  <Nombre>FUS</Nombre>\n",
+      "  <ProteinID>Q6IBQ5</ProteinID>\n",
+      "  <Longitud>526</Longitud>\n",
+      "</Protein> \n",
+      "\n",
+      "[[2]]\n",
+      "<Protein>\n",
+      "  <Nombre>FIBP</Nombre>\n",
+      "  <ProteinID>Q6IBQ3</ProteinID>\n",
+      "  <Longitud>364</Longitud>\n",
+      "</Protein> \n",
+      "\n",
+      "attr(,\"class\")\n",
+      "[1] \"XMLNodeSet\"\n",
+      "<Protein>\n",
+      "  <Nombre>FUS</Nombre>\n",
+      "  <ProteinID>Q6IBQ5</ProteinID>\n",
+      "  <Longitud>526</Longitud>\n",
+      "</Protein> \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Si quiero acceder a un nodo particular puedo hacer esto:\n",
+    "my_node <- getNodeSet(xml_document, \"//Protein\")\n",
+    "print(my_node)\n",
+    "print(my_node[[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9bab6154",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'FIBP'"
+      ],
+      "text/latex": [
+       "'FIBP'"
+      ],
+      "text/markdown": [
+       "'FIBP'"
+      ],
+      "text/plain": [
+       "[1] \"FIBP\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Si quiero recuperar el nombre de la proteina de uno de los nodos puedo hacer:\n",
+    "\n",
+    "secondProteinName <- xmlValue(getNodeSet(xml_document, \"//Nombre\")[2])\n",
+    "secondProteinName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8de37f6d",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol>\n",
+       "\t<li>'FUS'</li>\n",
+       "\t<li>'FIBP'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate}\n",
+       "\\item 'FUS'\n",
+       "\\item 'FIBP'\n",
+       "\\end{enumerate}\n"
+      ],
+      "text/markdown": [
+       "1. 'FUS'\n",
+       "2. 'FIBP'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[[1]]\n",
+       "[1] \"FUS\"\n",
+       "\n",
+       "[[2]]\n",
+       "[1] \"FIBP\"\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Si quiero extraer todos los nombres de la proteinas puedo hacer esto:\n",
+    "proteinNames <- xpathApply(\n",
+    "  xml_document,\n",
+    "  \"//Nombre\",\n",
+    "  xmlValue\n",
+    ")\n",
+    "proteinNames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c122a227",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "[1] \"FUS\"    \"Q6IBQ5\"\n",
+      "\n",
+      "[[2]]\n",
+      "[1] \"FIBP\"   \"Q6IBQ3\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Si quiero extrart varios valores de un nodo puedo hacer esto:\n",
+    "proteinNames <- xpathApply(\n",
+    "  xml_document,\n",
+    "  \"//Protein\",\n",
+    "  function(x) {\n",
+    "    return(\n",
+    "      c(\n",
+    "        xpathSApply(x, \"./Nombre\", xmlValue),\n",
+    "        xpathSApply(x, \"./ProteinID\", xmlValue)\n",
+    "      )\n",
+    "    )\n",
+    "  }\n",
+    ")\n",
+    "print(proteinNames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "62ebccf5",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "   Nombre ProteinID \n",
+      "    \"FUS\"  \"Q6IBQ5\" \n",
+      "\n",
+      "[[2]]\n",
+      "   Nombre ProteinID \n",
+      "   \"FIBP\"  \"Q6IBQ3\" \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Otra opcion para hacer lo mismo, pero mas complicado....\n",
+    "extract_protein_info <- function(node) {\n",
+    "  c(\n",
+    "    Nombre = xmlValue(getNodeSet(node, \"./Nombre\")[[1]]),\n",
+    "    ProteinID = xmlValue(getNodeSet(node, \"./ProteinID\")[[1]])\n",
+    "  )\n",
+    "}\n",
+    "\n",
+    "# Apply the custom function to each \"Protein\" node\n",
+    "protein_list <- xpathApply(\n",
+    "  xml_document,\n",
+    "  \"//Protein\",\n",
+    "  extract_protein_info\n",
+    ")\n",
+    "\n",
+    "# Check the result\n",
+    "print(protein_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2d687fd0",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl>\n",
+       "\t<dt>$Proteinas</dt>\n",
+       "\t\t<dd><dl>\n",
+       "\t<dt>$Protein</dt>\n",
+       "\t\t<dd><dl>\n",
+       "\t<dt>$Nombre</dt>\n",
+       "\t\t<dd>'FUS'</dd>\n",
+       "\t<dt>$ProteinID</dt>\n",
+       "\t\t<dd>'Q6IBQ5'</dd>\n",
+       "\t<dt>$Longitud</dt>\n",
+       "\t\t<dd>'526'</dd>\n",
+       "</dl>\n",
+       "</dd>\n",
+       "\t<dt>$Protein</dt>\n",
+       "\t\t<dd><dl>\n",
+       "\t<dt>$Nombre</dt>\n",
+       "\t\t<dd>'FIBP'</dd>\n",
+       "\t<dt>$ProteinID</dt>\n",
+       "\t\t<dd>'Q6IBQ3'</dd>\n",
+       "\t<dt>$Longitud</dt>\n",
+       "\t\t<dd>'364'</dd>\n",
+       "</dl>\n",
+       "</dd>\n",
+       "\t<dt>$.attrs</dt>\n",
+       "\t\t<dd><strong>cantidad:</strong> '2'</dd>\n",
+       "</dl>\n",
+       "</dd>\n",
+       "\t<dt>$NumeroDeResultados</dt>\n",
+       "\t\t<dd>'2'</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description}\n",
+       "\\item[\\$Proteinas] \\begin{description}\n",
+       "\\item[\\$Protein] \\begin{description}\n",
+       "\\item[\\$Nombre] 'FUS'\n",
+       "\\item[\\$ProteinID] 'Q6IBQ5'\n",
+       "\\item[\\$Longitud] '526'\n",
+       "\\end{description}\n",
+       "\n",
+       "\\item[\\$Protein] \\begin{description}\n",
+       "\\item[\\$Nombre] 'FIBP'\n",
+       "\\item[\\$ProteinID] 'Q6IBQ3'\n",
+       "\\item[\\$Longitud] '364'\n",
+       "\\end{description}\n",
+       "\n",
+       "\\item[\\$.attrs] \\textbf{cantidad:} '2'\n",
+       "\\end{description}\n",
+       "\n",
+       "\\item[\\$NumeroDeResultados] '2'\n",
+       "\\end{description}\n"
+      ],
+      "text/markdown": [
+       "$Proteinas\n",
+       ":   $Protein\n",
+       ":   $Nombre\n",
+       ":   'FUS'\n",
+       "$ProteinID\n",
+       ":   'Q6IBQ5'\n",
+       "$Longitud\n",
+       ":   '526'\n",
+       "\n",
+       "\n",
+       "\n",
+       "$Protein\n",
+       ":   $Nombre\n",
+       ":   'FIBP'\n",
+       "$ProteinID\n",
+       ":   'Q6IBQ3'\n",
+       "$Longitud\n",
+       ":   '364'\n",
+       "\n",
+       "\n",
+       "\n",
+       "$.attrs\n",
+       ":   **cantidad:** '2'\n",
+       "\n",
+       "\n",
+       "\n",
+       "$NumeroDeResultados\n",
+       ":   '2'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "$Proteinas\n",
+       "$Proteinas$Protein\n",
+       "$Proteinas$Protein$Nombre\n",
+       "[1] \"FUS\"\n",
+       "\n",
+       "$Proteinas$Protein$ProteinID\n",
+       "[1] \"Q6IBQ5\"\n",
+       "\n",
+       "$Proteinas$Protein$Longitud\n",
+       "[1] \"526\"\n",
+       "\n",
+       "\n",
+       "$Proteinas$Protein\n",
+       "$Proteinas$Protein$Nombre\n",
+       "[1] \"FIBP\"\n",
+       "\n",
+       "$Proteinas$Protein$ProteinID\n",
+       "[1] \"Q6IBQ3\"\n",
+       "\n",
+       "$Proteinas$Protein$Longitud\n",
+       "[1] \"364\"\n",
+       "\n",
+       "\n",
+       "$Proteinas$.attrs\n",
+       "cantidad \n",
+       "     \"2\" \n",
+       "\n",
+       "\n",
+       "$NumeroDeResultados\n",
+       "[1] \"2\"\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$Nombre\n",
+      "[1] \"FIBP\"\n",
+      "\n",
+      "$ProteinID\n",
+      "[1] \"Q6IBQ3\"\n",
+      "\n",
+      "$Longitud\n",
+      "[1] \"364\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tambien es posible convertir el contenido XML a una lista de R\n",
+    "\n",
+    "xml_list <- xmlToList(xml_document)\n",
+    "xml_list\n",
+    "\n",
+    "print(xml_list$Proteinas[2]$Protein)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3af05e01",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 2 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Nombre</th><th scope=col>ProteinID</th><th scope=col>Longitud</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>FUS </td><td>Q6IBQ5</td><td>526</td></tr>\n",
+       "\t<tr><td>FIBP</td><td>Q6IBQ3</td><td>364</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 2 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " Nombre & ProteinID & Longitud\\\\\n",
+       " <chr> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t FUS  & Q6IBQ5 & 526\\\\\n",
+       "\t FIBP & Q6IBQ3 & 364\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 2 × 3\n",
+       "\n",
+       "| Nombre &lt;chr&gt; | ProteinID &lt;chr&gt; | Longitud &lt;chr&gt; |\n",
+       "|---|---|---|\n",
+       "| FUS  | Q6IBQ5 | 526 |\n",
+       "| FIBP | Q6IBQ3 | 364 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Nombre ProteinID Longitud\n",
+       "1 FUS    Q6IBQ5    526     \n",
+       "2 FIBP   Q6IBQ3    364     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Tambien es posible convertir el contenido XML o parte del contenido en un\n",
+    "# dataframe.\n",
+    "xml_dataframe <- xmlToDataFrame(getNodeSet(xml_document, \"//Protein\"))\n",
+    "xml_dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "201678af",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>cantidad:</strong> '2'"
+      ],
+      "text/latex": [
+       "\\textbf{cantidad:} '2'"
+      ],
+      "text/markdown": [
+       "**cantidad:** '2'"
+      ],
+      "text/plain": [
+       "cantidad \n",
+       "     \"2\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Puedo extraer atributos de un nodo:\n",
+    "\n",
+    "xmlAttrs(\n",
+    "  getNodeSet(xml_document, \"//Proteinas\")[[1]]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "032a9e15",
+   "metadata": {},
+   "source": [
+    "### Libraria xml2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d540f489",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
+    "\n",
     "library(xml2)"
    ]
   },
@@ -72,7 +659,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a6dfa794",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "xml_content <- '<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
@@ -104,7 +695,10 @@
    "execution_count": null,
    "id": "ac9589a8",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -116,7 +710,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec2bbebf",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# La cantidad de resultados\n",
@@ -128,7 +726,10 @@
    "execution_count": null,
    "id": "fbd6e608",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +743,10 @@
    "execution_count": null,
    "id": "9368ad2f",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -157,7 +761,10 @@
    "execution_count": null,
    "id": "2b27db37",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -171,7 +778,10 @@
    "execution_count": null,
    "id": "7062f4c5",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -187,7 +797,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "082e14b7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Lo mismo pero de otra forma\n",
@@ -202,7 +816,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "454da6e5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Convertir a dataframe\n",
@@ -247,7 +865,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81560fe9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Para instalar rjson\n",
@@ -258,7 +880,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0f56ca9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "library(\"rjson\")"
@@ -268,7 +894,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6619e4a7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "respuesta <- '{\n",
@@ -293,7 +923,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "656d1b5b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Mostrar las proteinas\n",
@@ -305,7 +939,10 @@
    "execution_count": null,
    "id": "1284d247",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -317,7 +954,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "990add20",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Extraer los nombres de proteínas\n",
@@ -332,7 +973,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2236fb0f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Otra forma\n",
@@ -347,7 +992,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f024b83",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Convertir a dataframe\n",
@@ -382,7 +1031,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14bf8e36",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "tabla <- \"Nombre  ProteinID Longitud\n",
@@ -406,7 +1059,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.0.3"
+   "version": "4.1.2"
   }
  },
  "nbformat": 4,
