--- a/02_ejercicios_elementos_basicos_de_r.ipynb
+++ b/02_ejercicios_elementos_basicos_de_r.ipynb
@@ -259,9 +259,14 @@
     ")\n",
     "```\n",
     "\n",
-    "Crear un vector con las longitudes de la proteinas, otro vector con los nombres de las proteínas y otro con todos los nombres de los genes, otro con el Entry_id y otro con el Entry_Acc. \n",
+    "A partir de esta lisa, crear:\n",
     "\n",
-    "Crear un dataframe con todos los vectores.\n",
+    "- un vector con las longitudes de la proteinas,\n",
+    "- otro vector con los nombres de las proteínas\n",
+    "- otro con todos los nombres de los genes\n",
+    "- otro con el Entry_id\n",
+    "- otro con el Entry_Acc.\n",
+    "- Crear un dataframe con todos los vectores.\n",
     "\n",
     "Ayuda: list2DF, sapply, lapply"
    ]
@@ -543,7 +548,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.0.3"
+   "version": "4.1.2"
   }
  },
  "nbformat": 4,
