--- a/03_http.ipynb
+++ b/03_http.ipynb
@@ -119,8 +119,23 @@
     "    - POST: Para subir datos que requerirá el servidor para procesar el **pedido**.\n",
     "  - Recurso: Ruta del recurso (por ejemplo un archivo al que se dirige el **pedido**).\n",
     "  - Host: Nombre del **servidor**.\n",
-    "- La segunda parte son los datos que se envian al servidor. No es obligatoria.\n",
-    "\n",
+    "- La segunda parte son los datos que se envian al servidor. No es obligatoria.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c61935",
+   "metadata": {},
+   "source": [
+    "#### Veamos un ejemplo de pedido."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd089f0",
+   "metadata": {},
+   "source": [
+    "\\#\\# Inicio del pedido\n",
     "<pre>\n",
     "<b style=\"color:red\">POST</b> /<b style=\"color:blue\">Blast.cgi</b> HTTP/2\n",
     "<b style=\"color:green\">Host: blast.ncbi.nlm.nih.gov</b>\n",
@@ -139,19 +154,47 @@
     "\n",
     "<b style=\"color:purple\">ADV_VIEW=on&ALIGNMENTS=100&ALIGNMENT_VIEW=Pairwise</b>\n",
     "</pre>\n",
+    "\\#\\# Fin del pedido"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce98721b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- <b style=\"color:red\">POST</b> es el método.\n",
+    "- <b style=\"color:blue\">Blast.cgi</b> es el recurso.\n",
+    "- <b style=\"color:green\">Host: blast.ncbi.nlm.nih.gov</b> es el servidor.\n",
+    "- <b style=\"color:purple\">ADV_VIEW=on&ALIGNMENTS=100&ALIGNMENT_VIEW=Pairwise</b> son los datos enviados en el pedido.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0eb0cdc",
+   "metadata": {},
+   "source": [
     "\n",
     "### Respuestas HTTP:\n",
     "\n",
-    "Las repuestas tienen un formato similar, pero no van a ser relevantes para nosotros, con exceptión del código de estado.\n",
+    "Las respuestas tambien tienen un encabezado y luegos los datos propios que nos\n",
     "\n",
-    "El código de estado (**status code**) es un número que refleja si la consulta fue exitosa o si hubo algún tipo de problema.\n",
+    "pueden ser de interés.\n",
+    "\n",
+    "Los encabezados de una repuesta tiene un formato similar al de un pedido,\n",
+    "\n",
+    "pero no van a ser relevantes para nosotros, con exceptión del código de estado.\n",
+    "\n",
+    "El código de estado (**status code**) es un número que refleja si la consulta\n",
+    "\n",
+    "fue exitosa o si hubo algún tipo de problema.\n",
     "\n",
     "Algunos de los códigos de estados más comunes son:\n",
     "\n",
     "- 200 OK : La consulta se procesó exitosamente.\n",
     "- 301 Moved Permanently: La url no se encuentra en el lugar indicado, la nueva url se pasa en la respuesta.\n",
     "- 400 Bad Request: El servidor no entiende el pedido.\n",
-    "- 404 Not found: La url no se encontró.\n",
+    "- 404 Not found: El recurso que se busca no se encontró.\n",
     "- 500 Internal Server Error: El servidor encontró una situación que no sabe como manejar."
    ]
   },
@@ -197,7 +240,7 @@
     "\n",
     "Nosotros nos vamos a restringir a dos casos típicos usando el lenguage de programación R.\n",
     "\n",
-    "- Usando la librería httr, que permite hacer consultas de forma genérica a\n",
+    "- Usando la librería **httr**, que permite hacer consultas de forma genérica a\n",
     "  servicios http.\n",
     "- Usando librería específicas para interactuar con alguna base de datos\n",
     "  particular."
