--- a/04_Formatos_comunes.ipynb
+++ b/04_Formatos_comunes.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "## XML - Extensible Markup Language\n",
     "\n",
-    "Es un formato de texto que permite representar datos de formar jerarquica y arbitrario.\n",
+    "Es un formato de texto que permite representar datos de forma jerárquica y arbitraria.\n",
+    "\n",
     "No está pensado para ser leido directamente por un usuario.\n",
     "\n",
     "```xml\n",
@@ -60,6 +61,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43c16e0a",
+   "metadata": {},
+   "source": [
+    "La estructura de un archivo XML está formada por:\n",
+    "\n",
+    "- Nodos: Encerrados entre <nombre_del_nodo>...</nombre_del_nodo>\n",
+    "  - Los nodos son contenedores, pueden contenter:\n",
+    "    - Otros nodos\n",
+    "    - Un valor\n",
+    "  - Adicionalmente, los nodos pueden tener valores especiales llamados atributos.\n",
+    "    - <nodo atributo=\"valor\"></nodo>\n",
+    "- Valores: Texto dentro de un nodo.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f7cd30bc",
    "metadata": {},
    "source": [
@@ -71,6 +88,7 @@
     "Con ambas se pueden hacer las mismas cosas.\n",
     "\n",
     "Algunos paquetes que nos permiten acceder a las bases de datos pueden devolver\n",
+    "\n",
     "resultados generados con una de ellas, miestras que otras pueden usar otro."
    ]
   },
@@ -503,20 +521,39 @@
     "## JSON - Javascript Object Notation\n",
     "\n",
     "Es otro formato para representar datos jerárquicos y arbitrarios.\n",
+    "\n",
     "Es más simple que XML.\n",
+    "\n",
     "No está pensado para ser leido directamente por un usuario.\n",
+    "\n",
+    "Un archivo json tiene unos pocos elementos basicos:\n",
+    "\n",
+    "- Valores primitivos:\n",
+    "  - Texto: Encerrado entre comillas dobles.\n",
+    "  - Números\n",
+    "- Listas: Encerrado entre corchetes [].\n",
+    "  - Las listas pueden contener texto, números, otras listas u otros objectos.\n",
+    "- Objetos: Encerrados entre llaves {}.\n",
+    "  - Los objetos estan formados por pares del tipo clave y valor:\n",
+    "    - \"Clave\": \"Valor\"\n",
+    "  - Las claves son texto.\n",
+    "  - Los valores pueden ser texto, un número, una lista u otro objeto.\n",
+    "\n",
+    "En general, se muestran indentados para facilitar su comprensión,\n",
+    "\n",
+    "pero no es obligatorio.\n",
     "\n",
     "```json\n",
     "{\n",
     "    \"Proteinas\":[\n",
     "        {\n",
-    "            \"Nombre\": FUS,\n",
-    "            \"ProteinID\": Q6IBQ5,\n",
+    "            \"Nombre\": \"FUS\",\n",
+    "            \"ProteinID\": \"Q6IBQ5\",\n",
     "            \"Longitud\": 526\n",
     "        },\n",
     "        {\n",
-    "            \"Nombre\": FIBP,\n",
-    "            \"ProteinID\": Q6IBQ3,\n",
+    "            \"Nombre\": \"FIBP\",\n",
+    "            \"ProteinID\": \"Q6IBQ3\",\n",
     "            \"Longitud\": 364\n",
     "        }\n",
     "    ],\n",
@@ -680,9 +717,14 @@
     "## Texto tabular\n",
     "\n",
     "Es simplemente un texto plano que representa una tabla.\n",
-    "Cada línea de texto representa una fila de la tabla, requiere especificar un caracter de separación para las columnas.\n",
     "\n",
-    "Los datos que se pueden representar no son arbitrarios, tienen que tener forma de tabla y no son jerárquicos.\n",
+    "Cada línea de texto representa una fila de la tabla,\n",
+    "\n",
+    "requiere especificar un caracter de separación para las columnas.\n",
+    "\n",
+    "Los datos que se pueden representar no son arbitrarios,\n",
+    "\n",
+    "tienen que tener forma de tabla y no son jerárquicos.\n",
     "\n",
     "```txt\n",
     "Nombre  ProteinID Longitud\n",
