--- a/01_elementos_basicos_de_R.ipynb
+++ b/01_elementos_basicos_de_R.ipynb
@@ -744,7 +744,7 @@
    },
    "outputs": [],
    "source": [
-    "profesores <- c(\"Cristina\", \"Cristina\", \"Javier\")"
+    "profesores <- c(\"Cristina\", \"Pedro\", \"Roberto\")"
    ]
   },
   {
@@ -837,6 +837,81 @@
    "source": [
     "m1\n",
     "m2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conversion de listas en vectores\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mi_lista <- list(\"a\"=1, \"b\"=2)\n",
+    "unlist(mi_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conversion de listas en dataframes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "resultados <- list(\n",
+    "  c(nombre=\"PI3K\", target=\"PDK1\", code=\"23456\"),\n",
+    "  c(nombre=\"GPA\", target=\"AC\", code=\"4358\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "list2DF(resultados)\n",
+    "# t(list2DF(resultados))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "resultados <- list(\n",
+    "  list(nombre=\"PI3K\", target=\"PDK1\", code=\"23456\"),\n",
+    "  list(nombre=\"GPA\", target=\"AC\", code=\"4358\")\n",
+    ")\n",
+    "as.data.frame(sapply(resultados, unlist))"
    ]
   },
   {
@@ -1888,7 +1963,7 @@
    "outputs": [],
    "source": [
     "headtail <- function(df) {\n",
-    "    first_three <- 1:nrow(df) <= 3 \n",
+    "    first_three <- 1:nrow(df) <= 3\n",
     "    last_three <- 1:nrow(df) > (nrow(df)-3)\n",
     "    selected <- first_three | last_three\n",
     "    return(df[selected, ])\n",
