Updated pfam class

--- a/07_pfam_pdb.ipynb
+++ b/07_pfam_pdb.ipynb
@@ -11,24 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "install.packages(\"Rpdb\")\n",
-    "install.packages(\"bio3d\")\n",
-    "install.packages(\"htmltools\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c2e2a8b",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "install.packages(\"remotes\")\n",
-    "remotes::install_github(\"nvelden/NGLVieweR\")"
+    "install.packages(\"bio3d\")"
    ]
   },
   {
@@ -578,22 +561,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697d018b",
-   "metadata": {},
-   "source": [
-    "Podemos descargar  proteomas representativos con diferente grado de indentidad de secuencia,\n",
-    "que pertenecen a una familia.\n",
-    "\n",
-    "- RP15 Proteinas con 15% de identidad o mayor\n",
-    "- RP35 Proteinas con 35% de identidad o mayor\n",
-    "- RP55 Proteinas con 55% de identidad o mayor\n",
-    "- RP75 Proteinas con 75% de identidad o mayor\n",
-    "\n",
-    "Para ello, hay que modificar la url."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "61f59ce9",
    "metadata": {},
    "source": [
@@ -607,20 +574,6 @@
     "Vamos a provar con una búsquea simple.\n",
     "\n",
     "La respuesta también está en formato json."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d418fe6",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "library(httr)"
    ]
   },
   {
@@ -722,8 +675,7 @@
    },
    "outputs": [],
    "source": [
-    "library(bio3d)\n",
-    "library(Rpdb)"
+    "library(bio3d)"
    ]
   },
   {
@@ -769,34 +721,6 @@
    "outputs": [],
    "source": [
     "pdb1$atom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa318a33",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "library(NGLVieweR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a4ea0a6",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "a <- NGLVieweR(\"./1MTO.pdb\") %>% addRepresentation(\"cartoon\")"
    ]
   }
  ],
