Updated bioproject class?

--- a/09_Bioproject.ipynb
+++ b/09_Bioproject.ipynb
@@ -77,6 +77,21 @@
     "\n",
     "[SRA Toolkit](https://trace.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?view=software)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6411a219",
+   "metadata": {},
+   "source": [
+    "### Comandos más relevantes:\n",
+    "\n",
+    "  ```bash\n",
+    "  # Descargar el archivo SRA.\n",
+    "  > prefetch SRR0000001 -O /path/to/folder/\n",
+    "  # Convierte el archivo SRA en archivos fastq.\n",
+    "  > fasterq-dump /path/to/folder/SRR0000001.sra\n",
+    "  ```"
+   ]
   }
  ],
  "metadata": {
