--- a/02_clase_rest_api.ipynb
+++ b/02_clase_rest_api.ipynb
@@ -487,6 +487,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -497,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
